--- a/app/src/main/res/layout/activity_recycler_view_main.xml
+++ b/app/src/main/res/layout/activity_recycler_view_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_white"
     tools:context=".RecyclerView.RecyclerViewMain">
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,6 +14,29 @@
             android:id="@+id/RecyclerViewData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:layout_marginHorizontal="16dp">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btnNoDiff"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_marginRight="8dp"-->
+<!--                android:text="noDiff"/>-->
+<!--            <Button-->
+<!--                android:id="@+id/btnUpdate"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_marginRight="8dp"-->
+<!--                android:text="Update"/>-->
+
+<!--        </LinearLayout>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,11 +45,19 @@
             android:layout_marginHorizontal="16dp">
 
             <Button
+                android:id="@+id/btnDiff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginRight="8dp"
                 android:text="noDiff"/>
+            <Button
+                android:id="@+id/btnUpdateDiff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="8dp"
+                android:text="Update"/>
 
         </LinearLayout>
 
