--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="orenMantep">#F8C154</color>
     <color name="light_white">#f2f5f8</color>
     <color name="underline">#D8D6D6</color>
+    <color name="pinkMantep">#EC407A</color>
+    <color name="biruMantep">#26C6DA</color>
 </resources>
