--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="underline">#D8D6D6</color>
     <color name="pinkMantep">#EC407A</color>
     <color name="biruMantep">#26C6DA</color>
+    <color name="pinkSplash">#EA707D</color>
 </resources>
