--- a/app/src/main/res/layout/activity_dialog_android.xml
+++ b/app/src/main/res/layout/activity_dialog_android.xml
@@ -60,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="Isi disini bang"
+            android:textColorHint="@color/black"
             android:textColor="@color/black" />
 
         <androidx.appcompat.widget.AppCompatButton
